my solving in task_05

--- a/restaurants/templates/detail.html
+++ b/restaurants/templates/detail.html
@@ -5,6 +5,9 @@
         <title>Detail</title>
     </head>
     <body>
-        
+        <h1>{{restaurant.name}}</h1>
+        <p>{{restaurant.description}}</p>
+        <h3>{{restaurant.opening_time}}</h3>
+        <h3>{{restaurant.closing_time}}</h3>
     </body>
 </html>
